added creating and show message

--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <title>Title</title>
     <link rel="stylesheet" href="Styles/dialog.css">
     <link rel="stylesheet" href="Styles/settings.css">
+    <link rel="stylesheet" href="Styles/message.css">
 </head>
 <body>
 <script type="module" src="main.js"></script>
-<script type="module" src="settingPage.js"></script>
+<script type="module" src="Pages/settingPage.js"></script>
+<script type="module" src ="Elements/message.js"></script>
+<script type="module" src="Pages/dialogPage.js"></script>
 </body>
 </html>
