created auth page, without functionality

--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <link rel="stylesheet" href="Styles/dialog.css">
     <link rel="stylesheet" href="Styles/settings.css">
     <link rel="stylesheet" href="Styles/message.css">
+    <link rel="stylesheet" href="Styles/modal.css">
 </head>
 <body>
 <script type="module" src="main.js"></script>
 <script type="module" src="Pages/settingPage.js"></script>
 <script type="module" src ="Elements/message.js"></script>
 <script type="module" src="Pages/dialogPage.js"></script>
+<script type="module" src="Pages/authorizationPage.js"></script>
 </body>
 </html>
