added code page and finished authorization page

--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
 <script type="module" src ="Elements/message.js"></script>
 <script type="module" src="Pages/dialogPage.js"></script>
 <script type="module" src="Pages/authorizationPage.js"></script>
+<script type="module" src="API/log.js"></script>
+<script type="module" src="Pages/codePade.js"></script>
 </body>
 </html>
