added webSocket connection, and sending messages

--- a/index.html
+++ b/index.html
@@ -9,12 +9,7 @@
     <link rel="stylesheet" href="Styles/modal.css">
 </head>
 <body>
+<script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js" integrity="sha256-WCzAhd2P6gRJF9Hv3oOOd+hFJi/QJbv+Azn4CGB8gfY=" crossorigin="anonymous"></script>
 <script type="module" src="main.js"></script>
-<script type="module" src="Pages/settingPage.js"></script>
-<script type="module" src ="Elements/message.js"></script>
-<script type="module" src="Pages/dialogPage.js"></script>
-<script type="module" src="Pages/authorizationPage.js"></script>
-<script type="module" src="API/log.js"></script>
-<script type="module" src="Pages/codePade.js"></script>
 </body>
 </html>
